Removing scroll reminder on mobile devices to avoid weird mobile behavior

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -168,3 +168,7 @@ ul.faqs li.collection-item .answer {
     opacity: 0;
   }
 }
+
+@media only screen and (max-width: 760px) {
+  #scroll-down { display: none; }
+}
